# rjasmr

./: Cargo.toml  LICENSE  README.md  readme.md
src/: lib.rs  main.rs
tests/: audio.rs  thumbnail.rs
