[package]
name = "rjasmr"
version = "0.1.1"
edition = "2021"
description = "Simple japaneseasmr.com downloader, written in Rust🚀"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"]  }
reqwest = "0.11.14"
scraper = "0.14.0"
